--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
               <option value="GDP/capita">GDP/capita</option>
               <option value="diesel price">diesel price</option>
               <option value="gas price">gas price</option>
+              <option value="HDD 15.5C">HDD 15.5C</option>
+              <option value="CDD 23C">CDD 23C</option>
               <option value="area">area</option>
               <!--<option value="gas price">gas price</option>
               <option value="diesel price">diesel price</option>
@@ -206,18 +208,12 @@ d3.select("select")
       //console.log("d[val]: ", d[attrFlag])
       return fn_colour_barChart(attrFlag, d[attrFlag]);
     });
-    // .style("stroke", function (d) {
-    //   if (d[attrFlag] === 0) return "#E6E8E3";
-    // });
 
     svgBarChart = d3.select("#" + geogroupArray[1] + " .barSVG")
     svgBarChart.selectAll("rect").attr("fill", function (d) {
       //output the discretized colour according to selected attribute
       return fn_colour_barChart(attrFlag, d[attrFlag]);
     });
-    // .attr("stroke", function (d) {
-    //   if (d[attrFlag] === 0) return "#E6E8E3";
-    // });
 
     //colour the legend squares
     fn_updateLegend(attrFlag);
@@ -316,6 +312,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
     "GDP/capita": [1700, 128046],
     "diesel price": [0.5, 1.8],
     "gas price": [0.5, 1.8],
+    "HDD 15.5C": [0, 3000], "CDD 23C": [0, 1000], //FMB
     "area": [0, 2000]
   }
 }) //end read tsv
@@ -552,7 +549,7 @@ function highlightElements(idName) {
     .style("stroke", "#363636"); 
 
   d3.selectAll(".bar:not(#bar" + idName + ")")
-    .style("fill-opacity", 0.1); //.style("stroke", "#E6E8E3"); 
+    .style("fill-opacity", 0.1);
 
   d3.selectAll(".node:not(#node" + idName + ")")
     .style("fill-opacity", 0.1)
