--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
               <option value="HDD 15.5C">HDD 15.5C</option>
               <option value="CDD 23C">CDD 23C</option>
               <option value="area">area</option>
-              <option value="low BUA (2014)">low BUA (2014)</option>           
+              <option value="low BUA (2014)">low BUA (2014)</option>
+              <option value="high BUA (2014)">high BUA (2014)</option>
               <!--<option value="change in emissions">change in emissions</option>
               <option value="low BUA %">low BUA % (2014)</option>
               <option value="high BUA %">high BUA % (2014)</option>
@@ -310,7 +311,9 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
     "diesel price": [0.5, 1.8],
     "gas price": [0.5, 1.8],
     "HDD 15.5C": [0, 3000], "CDD 23C": [0, 1000], //FMB
-    "area": [0, 2000], "low BUA (2014)": [0, 1000]
+    "area": [0, 2000], 
+    "low BUA (2014)": [0, 1000],
+    "high BUA (2014)": [0, 2500]
   }
 }) //end read tsv
 console.log("attrFlag: ", attrFlag)
