--- a/index.html
+++ b/index.html
@@ -818,6 +818,9 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   if (geogroup_name === "groupEUCWLatAmerAfrica" && 
     d3.select("#gdpButton").text() === "per GDP") {
     fn_arrow();
+  } else if (geogroup_name === "groupUSAAsia" && 
+    d3.select("#gdpButton").text() === "per capita") {
+    fn_arrow_asia();
   }
 
   //svg chart titles
