--- a/index.html
+++ b/index.html
@@ -693,11 +693,21 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
         idName = format_idName(d.city);
       
         highlightElements(idName);
+        
+        if (this_dim === "per capita") {
+          if (d.city === "Rotterdam") emissionIntensity = rotterdamEmissionsPerCap;
+          else emissionIntensity = formatDecimalSci(d[this_dim]);
+        }
+        else if (this_dim === "per GDP") {
+          if (d.city === "Kaohsiung") emissionIntensity = kaohsiungEmissionsPerGDP;
+          else if (d.city === "Taoyuan") emissionIntensity = taoyuanEmissionsPerGDP;
+          else emissionIntensity = formatDecimalSci(d[this_dim]);
+        }
 
         var tipx = 50;
         var tipy = -120;
         div.style("opacity", 1);
-        div.html(formatDecimalSci(d[this_dim]) + " " + dimUnits[this_dim])
+        div.html(emissionIntensity + " " + dimUnits[this_dim])
           .style("left", d3.event.pageX + tipx + "px")
           .style("top", d3.event.pageY + tipy + "px");
 
