--- a/index.html
+++ b/index.html
@@ -701,6 +701,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
         else if (this_dim === "per GDP") {
           if (d.city === "Kaohsiung") emissionIntensity = kaohsiungEmissionsPerGDP;
           else if (d.city === "Taoyuan") emissionIntensity = taoyuanEmissionsPerGDP;
+          else if (d.city === "Lagos") emissionIntensity = lagosEmissionsPerGDP;
           else emissionIntensity = formatDecimalSci(d[this_dim]);
         }
 
