--- a/index.html
+++ b/index.html
@@ -561,8 +561,7 @@ function highlightElements(idName) {
 
 function emissionsBarChart(geogroup_name, geogroup_id) {
   //dimExtent = [dimExtentDict[attrFlag][0], dimExtentDict[attrFlag][1]]
-  var reorderButton = d3.select("#reorderButton").text();
-  console.log("reorderButton: ", reorderButton)
+  var reorderButton = d3.select("#reorderButton").text();  
 
   // Remove any previous bar chart
   d3.select(geogroup_id).select("svg").remove();
@@ -624,7 +623,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
 
   //Fit barCharts responsively using viewBox
   //NB: viewBox stretches text labels as well, so they must be fixed later by adjusting the scale
-  my_width = "99%";
+  my_width = geogroup_id === "#barChart_EUCWLatAmerAfrica" ? "97%" : "100%";
   var svgBarChart = d3.select(geogroup_id).append("svg").attr("class", "barSVG")
     .attr('width', my_width)
     .attr('height', 125) // height)
@@ -694,11 +693,22 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
         idName = format_idName(d.city);
       
         highlightElements(idName);
+        
+        if (this_dim === "per capita") {
+          if (d.city === "Rotterdam") emissionIntensity = rotterdamEmissionsPerCap;
+          else emissionIntensity = formatDecimalSci(d[this_dim]);
+        }
+        else if (this_dim === "per GDP") {
+          if (d.city === "Kaohsiung") emissionIntensity = kaohsiungEmissionsPerGDP;
+          else if (d.city === "Taoyuan") emissionIntensity = taoyuanEmissionsPerGDP;
+          else if (d.city === "Lagos") emissionIntensity = lagosEmissionsPerGDP;
+          else emissionIntensity = formatDecimalSci(d[this_dim]);
+        }
 
         var tipx = 50;
         var tipy = -120;
         div.style("opacity", 1);
-        div.html(formatDecimalSci(d[this_dim]) + " " + dimUnits[this_dim])
+        div.html(emissionIntensity + " " + dimUnits[this_dim])
           .style("left", d3.event.pageX + tipx + "px")
           .style("top", d3.event.pageY + tipy + "px");
 
@@ -818,6 +828,12 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   if (geogroup_name === "groupEUCWLatAmerAfrica" && 
     d3.select("#gdpButton").text() === "per GDP") {
     fn_arrow();
+  } else if (geogroup_name === "groupUSAAsia" && 
+    d3.select("#gdpButton").text() === "per capita") {
+    fn_arrow_asia();
+  } else if (geogroup_name === "groupEUCWLatAmerAfrica" && 
+    d3.select("#gdpButton").text() === "per capita") {
+    fn_arrow_africa();
   }
 
   //svg chart titles
