--- a/index.html
+++ b/index.html
@@ -825,15 +825,16 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   //fn_appendRegionalMeans(svgBarChart, geogroup_name, this_dim, emissions_scaled, x, y);
 
   //svg arrow for Rotterdam bar only if on emissions/capita view
-  if (geogroup_name === "groupEUCWLatAmerAfrica" && 
+  if (geogroup_id === "#barChart_EUCWLatAmerAfrica" && 
     d3.select("#gdpButton").text() === "per GDP") {
     fn_arrow();
-  } else if (geogroup_name === "groupUSAAsia" && 
-    d3.select("#gdpButton").text() === "per capita") {
+  } else if (geogroup_id === "#barChart_USAAsia" && 
+    d3.select("#gdpButton").text() === "per capita") {    
     fn_arrow_asia();
-  } else if (geogroup_name === "groupEUCWLatAmerAfrica" && 
+  } else if (geogroup_id === "#barChart_EUCWLatAmerAfrica" && 
     d3.select("#gdpButton").text() === "per capita") {
-    fn_arrow_africa();
+    // fn_arrow_africa();    
+    fn_arrowtmp(geogroup_id, "Lagos");
   }
 
   //svg chart titles
