Added TomTom world rank

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <option value="high BUA % (2014)">high BUA % (2014)</option>
             <option value="high BUA density (2014)">high BUA density (2014)</option>
             <option value="Congestion rank (INRIX)">Congestion rank (INRIX)</option>
+            <option value="World Rank (TomTom)">World Rank (TomTom)</option>            
             <!--<option value="Congestion rank (INRIX)">Congestion rank (INRIX)</option>
             <option value="change in emissions">change in emissions</option>
             <option value="Congestion rank (INRIX)">Congestion rank (INRIX)</option>
@@ -294,7 +295,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
     "low BUA (2014)": [0, 1000], "low BUA % (2014)": [0, 100],
     "high BUA (2014)": [0, 2500], "high BUA % (2014)": [0, 100],
     "low BUA density (2014)": [0,1500], "high BUA density (2014)": [0,25000],
-    "Congestion rank (INRIX)": [200,700], "Congestion Index (TomTom)": [0.1, 0.5],
+    "Congestion rank (INRIX)": [200,700], "World Rank (TomTom)": [25, 150],
     "Cities in Motion index (IESE)": [30,100]
 
   }
