--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- row for barChart title and toggle buttons -->
     <div class="row">
       <div class="col-lg-12">
-        <div id="barChartCaption" class="headings">Per capita emissions [tCO₂/capita]</div>
+        <div id="barChartCaption" class="headings">Per capita emissions [tCO₂eq/capita]</div>
 
         <ul class="nytg-sort" id="emissionsToggleButton">
           <li id="gdpButton">per GDP</li>
