--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@ function highlightElements(idName) {
     .style("stroke-opacity", 0.1);
   
   //Dim all countries but current country
-  var thisCountry = format_idName(data_GHG.find(x => x.idName === idName).country);  
+  // var thisCountry = format_idName(data_GHG.find(x => x.idName === idName).country);
+  var thisCountry = data_GHG.find(x => x.idName === idName).country.replace(/\s/g, '_');  
   d3.select("#map" + thisCountry).style("fill", countryHighlightColour);
   d3.selectAll(".countries path:not(#map" + thisCountry + ")")
     .style("opacity", 0.1);
@@ -716,7 +717,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
           .style("top", d3.event.pageY + tipy + "px");
 
       })
-      .on("mouseout", function (d) {       
+      .on("mouseout", function (d) {
         resetElements();
         
         d3.select("#tick" + idName).text(function (d) { return fn_abbr(d); })
